# Operating_systems_project_1

./: CMakeLists.txt  README.md
include/: DataGeneration.h  QuickMultithread.hpp
include/Algorithms/: Quick.h  QuickMultithread.hpp  SortingAlgorithm.h
include/UI/: Button.h  Checkbox.h  CheckboxGroup.h  Dropdown.h  SlideBar.h  UserInterface.h
src/: Quick.cpp  QuickMultithread.cpp  main.cpp
tests/: test_DataGeneration.cpp  test_sizeOneArray.cpp
